--- a/themes/spectral/layouts/index.html
+++ b/themes/spectral/layouts/index.html
@@ -2,11 +2,13 @@
 
 {{ partial "banner.html" . }}
 
-{{ partial "one.html" . }}
+{{ partial "about.html" . }}
 
 {{ partial "two.html" . }}
 
 {{ partial "three.html" . }}
+
+{{ partial "one.html" . }}
 
 {{ partial "cta.html" . }}
 
