--- a/themes/spectral/layouts/partials/one.html
+++ b/themes/spectral/layouts/partials/one.html
@@ -7,7 +7,7 @@
 			<header class="major">
         <h2>{{ .title | safeHTML}}</h2>
 
-        {{ partial "body_text.html" (dict "context" . "md" $md) }}
+        {{ .body | safeHTML }}
 			</header>
 			<ul class="icons major">
         {{ range .icon }}
