--- a/themes/spectral/assets/css/main.css
+++ b/themes/spectral/assets/css/main.css
@@ -85,6 +85,16 @@ section, summary, time, mark, audio, video {
 	margin: 10px 0;
 }
 
+.recruitment-image {
+	text-align: center;
+	display: grid;
+	max-width: 100%;
+    max-height: 100vh;
+    margin: auto;
+	border-radius: 4px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;}
