padding for recruitment page

--- a/themes/spectral/assets/css/main.css
+++ b/themes/spectral/assets/css/main.css
@@ -95,6 +95,10 @@ section, summary, time, mark, audio, video {
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+.padded-title {
+	margin: 2em 0 1em;
+}
+
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;}
