--- a/themes/spectral/assets/css/main.css
+++ b/themes/spectral/assets/css/main.css
@@ -86,9 +86,10 @@ section, summary, time, mark, audio, video {
 }
 
 .recruitment-image {
+	margin: 2em 0 0;
 	text-align: center;
 	display: grid;
-	max-width: 80%;
+	max-width: 85%;
     max-height: 100vh;
     margin: auto;
 	border-radius: 4px;
