--- a/themes/spectral/assets/css/main.css
+++ b/themes/spectral/assets/css/main.css
@@ -86,12 +86,11 @@ section, summary, time, mark, audio, video {
 }
 
 .recruitment-image {
-	margin: 2em 0 0;
 	text-align: center;
 	display: grid;
 	max-width: 85%;
     max-height: 100vh;
-    margin: auto;
+    margin: 2em auto auto;
 	border-radius: 4px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
