--- a/themes/spectral/layouts/partials/footer.html
+++ b/themes/spectral/layouts/partials/footer.html
@@ -19,6 +19,9 @@
               {{ with .Site.Params.social.email }}
               <li><a href="mailto:{{ . }}" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
               {{ end }}
+	      {{ with .Site.Params.social.privacy_policy }}
+	       <p><a href="{{ . }}">Privacy Policy</a></p>
+	      {{ end }}
               {{ with .Site.Params.contact.phone }}
               <li><a href="tel:{{ . }}" class="icon fa-phone"><span class="label">Phone</span></a></li>
               {{ end }}
