--- a/themes/spectral/assets/css/main.css
+++ b/themes/spectral/assets/css/main.css
@@ -177,7 +177,7 @@ input, select, textarea {
 
 	body, input, select, textarea {
 		color: #fff;
-		font-family: "Josefin Sans", Helvetica, sans-serif;
+		font-family: Helvetica, sans-serif;
 		font-size: 15pt;
 		font-weight: 400;
 		letter-spacing: 0.075em;
